--- a/paystack/src/main/res/layout/co_paystack_android____activity_card.xml
+++ b/paystack/src/main/res/layout/co_paystack_android____activity_card.xml
@@ -2,11 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/windowBackground"
     tools:context=".ui.PinActivity">
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -16,8 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
-        android:orientation="horizontal"
-        tools:context=".ui.PinActivity">
+        android:orientation="horizontal">
+
         <Space
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -28,21 +29,22 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="10"
-            android:background="#292929"
+            android:background="@color/cardBackground"
             android:gravity="center_vertical"
-            android:minHeight="150dp">
+            android:minHeight="150dp"
+            android:padding="@dimen/spacing_large">
+
             <TextView
-                android:layout_width="match_parent"
                 android:id="@+id/prompt_text"
+                style="@style/PaystackTextBody"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/paystack__view__margin"
-                android:layout_marginRight="@dimen/paystack__view__margin"
-                android:layout_marginBottom="@dimen/paystack__view__margin"
                 android:layout_alignParentTop="true"
                 android:layout_centerInParent="true"
-                android:background="#292929"
+                android:layout_marginBottom="@dimen/spacing_large"
                 android:gravity="center"
                 android:text="Please provide valid card details"/>
+
             <LinearLayout
                 android:id="@+id/layout_card_num"
                 android:layout_width="wrap_content"
@@ -54,26 +56,26 @@
 
                 <EditText
                     android:id="@+id/edit_card_number"
+                    style="@style/PaystackEditText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:hint="Card number"
                     android:inputType="number"
                     android:minEms="8"
-                    android:text=""
                     android:focusedByDefault="true"
-                    />
+                    android:layout_marginEnd="@dimen/spacing_small"/>
 
                 <EditText
                     android:id="@+id/edit_cvc"
+                    style="@style/PaystackEditText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:hint="cvv"
+                    android:hint="CVV"
                     android:inputType="number"
                     android:maxLength="4"
-                    android:minEms="4"
-                    android:text=""/>
+                    android:minEms="4"/>
             </LinearLayout>
 
             <View
@@ -84,39 +86,42 @@
 
             <EditText
                 android:id="@+id/edit_expiry_month"
+                style="@style/PaystackEditText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/layout_card_num"
-                android:layout_toLeftOf="@id/divider_horizontal"
-                android:gravity="right"
-                android:hint="mm"
+                android:layout_toStartOf="@id/divider_horizontal"
+                android:layout_marginTop="@dimen/spacing_medium"
+                android:layout_marginEnd="@dimen/spacing_tiny"
+                android:gravity="center"
+                android:hint="MM"
                 android:inputType="number"
                 android:maxEms="3"
-                android:maxLength="2"
-                android:text=""
-                android:layout_toStartOf="@id/divider_horizontal"/>
+                android:maxLength="2"/>
 
             <EditText
                 android:id="@+id/edit_expiry_year"
+                style="@style/PaystackEditText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/layout_card_num"
-                android:layout_toRightOf="@id/divider_horizontal"
-                android:gravity="left"
-                android:hint="yyyy"
+                android:layout_toEndOf="@id/divider_horizontal"
+                android:layout_marginTop="@dimen/spacing_medium"
+                android:layout_marginStart="@dimen/spacing_tiny"
+                android:gravity="center"
+                android:hint="YYYY"
                 android:inputType="number"
                 android:maxEms="4"
-                android:maxLength="4"
-                android:text=""
-                android:layout_toEndOf="@id/divider_horizontal"/>
+                android:maxLength="4"/>
 
             <Button
                 android:id="@+id/button_perform_transaction"
+                style="@style/PaystackButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/edit_expiry_year"
                 android:layout_centerHorizontal="true"
-                android:padding="8dp"
+                android:layout_marginTop="@dimen/spacing_large"
                 android:text="Continue"/>
         </RelativeLayout>
 
