--- a/paystack/src/main/res/layout/co_paystack_android____activity_otp.xml
+++ b/paystack/src/main/res/layout/co_paystack_android____activity_otp.xml
@@ -3,11 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/windowBackground"
     tools:context=".ui.OtpActivity">
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -18,16 +19,21 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:background="#292929"
+        android:background="@color/cardBackground"
         app:auto_submit="false"
         app:button_alpha_textsize="0sp"
         app:button_drawable_size="24dp"
-        app:button_numeric_textsize="15sp"
-        app:pin_indicator_stroke_width="0dp"
+        app:button_numeric_textsize="16sp"
+        app:pin_indicator_stroke_width="2dp"
         app:pin_length="10"
         app:place_digits_randomly="false"
         app:prompt_text="Please enter OTP"
-        app:prompt_textsize="13sp"
+        app:prompt_textsize="16sp"
         app:vibrate_on_incomplete_submit="false"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
 </LinearLayout>
