--- a/paystack/src/main/res/layout/co_paystack_android____activity_pin.xml
+++ b/paystack/src/main/res/layout/co_paystack_android____activity_pin.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/windowBackground"
     tools:context=".ui.PinActivity">
 
     <Space
@@ -19,16 +19,20 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        android:background="#292929"
+        android:background="@color/cardBackground"
         app:button_alpha_textsize="0sp"
         app:button_drawable_size="24dp"
-        app:button_numeric_textsize="13sp"
-        app:pin_indicator_size="13sp"
+        app:button_numeric_textsize="16sp"
+        app:pin_indicator_size="14sp"
         app:pin_indicator_spacing="30dp"
-        app:pin_indicator_stroke_width="1dp"
+        app:pin_indicator_stroke_width="2dp"
         app:pin_length="4"
-        app:prompt_text="To confirm you're the owner of this card, please enter your card pin"
-        app:prompt_textsize="15sp"/>
+        app:prompt_text="To confirm you're the owner of this card, please enter your card PIN"
+        app:prompt_textsize="16sp"/>
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
 </LinearLayout>
