--- a/paystack/src/main/res/values/styles.xml
+++ b/paystack/src/main/res/values/styles.xml
@@ -1,20 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Paystack.Dialog" parent="@style/Theme.AppCompat">
+    <!-- Pacific Deep Theme Base -->
+    <style name="PaystackTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
+        <item name="android:textColorPrimary">@color/textPrimary</item>
+        <item name="android:textColorSecondary">@color/textSecondary</item>
+        <item name="android:textColorHint">@color/textHint</item>
+        <item name="android:colorControlNormal">@color/inputBorder</item>
+        <item name="android:colorControlActivated">@color/inputBorderFocused</item>
+    </style>
+
+    <!-- Dialog Styles -->
+    <style name="Paystack.Dialog" parent="Theme.AppCompat.Dialog">
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@color/dialogBackground</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowAnimationStyle">@android:style/Animation</item>
-    </style>
-    <style name="Paystack.Dialog.CardEntry" parent="Paystack.Dialog">
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/textPrimary</item>
+        <item name="android:textColorSecondary">@color/textSecondary</item>
     </style>
 
-    <style name="Paystack.Dialog.PinEntry" parent="Paystack.Dialog">
+    <style name="Paystack.Dialog.CardEntry" parent="Paystack.Dialog" />
+    <style name="Paystack.Dialog.PinEntry" parent="Paystack.Dialog" />
+    <style name="Paystack.Dialog.OtpEntry" parent="Paystack.Dialog" />
+
+    <!-- Button Style -->
+    <style name="PaystackButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/buttonBackground</item>
+        <item name="android:textColor">@color/buttonText</item>
+        <item name="android:textSize">@dimen/text_size_body</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:minHeight">@dimen/button_height</item>
+        <item name="android:paddingLeft">@dimen/spacing_large</item>
+        <item name="android:paddingRight">@dimen/spacing_large</item>
+        <item name="android:paddingTop">@dimen/spacing_medium</item>
+        <item name="android:paddingBottom">@dimen/spacing_medium</item>
     </style>
 
-    <style name="Paystack.Dialog.OtpEntry" parent="Paystack.Dialog">
+    <!-- EditText Style -->
+    <style name="PaystackEditText" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@color/inputBackground</item>
+        <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:textColorHint">@color/textHint</item>
+        <item name="android:textSize">@dimen/text_size_body</item>
+        <item name="android:minHeight">@dimen/input_height</item>
+        <item name="android:paddingLeft">@dimen/spacing_medium</item>
+        <item name="android:paddingRight">@dimen/spacing_medium</item>
+        <item name="android:paddingTop">@dimen/spacing_medium</item>
+        <item name="android:paddingBottom">@dimen/spacing_medium</item>
+    </style>
+
+    <!-- TextView Styles -->
+    <style name="PaystackTextHeading" parent="TextAppearance.AppCompat.Headline">
+        <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:textSize">@dimen/text_size_heading</item>
+    </style>
+
+    <style name="PaystackTextBody" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:textSize">@dimen/text_size_body</item>
+    </style>
+
+    <style name="PaystackTextCaption" parent="TextAppearance.AppCompat.Caption">
+        <item name="android:textColor">@color/textSecondary</item>
+        <item name="android:textSize">@dimen/text_size_caption</item>
     </style>
 
 </resources>
